fix(material/icon): changes overflow to visible for button icon
Updates styles for Angular Material Icon so when the icon is
within a button it sets the overflow to visible to avoid the
icon from being cutoff. Also updates the line-height to 1 set

Fixes b/250063405

--- a/src/material/icon/icon.scss
+++ b/src/material/icon/icon.scss
@@ -51,6 +51,14 @@ mat-icon {
   transform: scale(-1, 1);
 }
 
+// Makes button icon overflow visible to fix b/250063405
+.mat-mdc-icon-button .mat-icon,
+.mdc-button .mat-icon,
+.mat-mdc-fab-base .mat-icon {
+  overflow: visible;
+  line-height: 1 !important;
+}
+
 .mat-form-field:not(.mat-form-field-appearance-legacy) {
   .mat-form-field-prefix,
   .mat-form-field-suffix {
@@ -60,6 +68,7 @@ mat-icon {
 
     .mat-icon-button .mat-icon {
       margin: auto;
+      overflow: visible;
     }
   }
 }
